fix: align table left and right

--- a/src/css/_xai.scss
+++ b/src/css/_xai.scss
@@ -19,11 +19,10 @@
     // flex: 50%;
     overflow-x: auto;
     overflow-y: visible;
-
-    .qrCellSetsTableRightInner {
-      .qrCellSetsTableRow {
-        overflow-y: visible;
-      }
+    .qrCellSetsTableRow {
+      width: 100%;
+      overflow-y: hidden;
+      margin-bottom: -6px;
     }
   }
 
@@ -112,6 +111,7 @@
   .geneIcon {
     height: 30px;
     margin-right: 1px;
+    margin-top: 2px;
     min-width: 12px;
     position: relative;
   }
